Edits from Fridad June 29

--- a/views/Composepage.jade
+++ b/views/Composepage.jade
@@ -1,11 +1,11 @@
 doctype html
 html
 	head
-		title=title 
+		title= title 
 		
-	body
+	block body
 		h1= text
-		
+
 		button(onclick="move1()") Home
 		br
 		button(onclick="move2()") Inbox
@@ -26,6 +26,3 @@ script.
 	function move4() {
 		window.location.href = '/sent'
 	}
-
-
-	
