--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,9 +1,63 @@
 doctype html
 html
-  head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
-    
-  body
-    block content
+	head
 
+	body
+		link(rel='stylesheet', href='/stylesheets/style.css')
+		p1
+			title= title
+		h1= text
+		h2
+		button(onclick="move1()") Home
+		
+		button(onclick="move2()") Inbox
+		
+		button(onclick="move3()") Compose
+		
+		button(onclick="move4()") Sent
+		
+
+	
+			
+			
+				
+script.
+	function move1() {
+		window.location.href = '/home'
+	}
+	function move2() {
+		window.location.href = '/inbox'
+	}
+	function move3() {
+		window.location.href = '/compose'
+	}
+	function move4() {
+		window.location.href = '/sent'
+	}
+	
+html
+	head
+		body
+			h3
+			
+			
+			<div clas= "col">
+			<p>Sender</p>
+			<p>Subject</p>
+			<p>Attachment</p>
+			<p>Brief body</p>
+			</div>
+			
+			<div clas= "col">
+			<p>Sender</p>
+			<p>Subject</p>
+			<p>Attachment</p>
+			<p>Brief body</p>
+			</div>
+			
+			<div clas= "col">
+			<p>Sender</p>
+			<p>Subject</p>
+			<p>Attachment</p>
+			<p>Brief body</p>
+			</div>
